# stonexgps

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt
docs/: installation.md
notebooks/: example_notebook.ipynb
src/package_name/: transformations.py
src/package_name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/stonexgps/: __init__.py  read_files.py
src/stonexgps/utils/: gnss_crd.py  gnss_time.py
test/: test_transformations.py
